gccida/g0/try_to_integrate
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2260:4: error: expected ';' after expression
rtx old_stack_level; // [rsp+38h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2260:5: error: use of undeclared identifier 'old_stack_level'
rtx old_stack_level; // [rsp+38h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2261:4: error: expected ';' after expression
rtx seq; // [rsp+40h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2261:5: error: use of undeclared identifier 'seq'
rtx seq; // [rsp+40h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2263:4: error: expected ';' after expression
rtx first_insn; // [rsp+50h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2263:5: error: use of undeclared identifier 'first_insn'
rtx first_insn; // [rsp+50h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2264:4: error: expected ';' after expression
rtx temp; // [rsp+58h] [rbp-28h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2264:5: error: use of undeclared identifier 'temp'
rtx temp; // [rsp+58h] [rbp-28h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2265:4: error: expected ';' after expression
rtx before_call; // [rsp+60h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2265:5: error: use of undeclared identifier 'before_call'
rtx before_call; // [rsp+60h] [rbp-20h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2267:4: error: expected ';' after expression
rtx insn; // [rsp+70h] [rbp-10h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2267:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+70h] [rbp-10h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2270:1: error: use of undeclared identifier 'old_stack_level'
old_stack_level = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2272:1: error: use of undeclared identifier 'before_call'
before_call = get_last_insn( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2273:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2274:1: error: use of undeclared identifier 'temp'
temp = expand_inline_function( fndecl, actparms, target, ignore, type, structure_value_addr); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2275:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2276:6: error: use of undeclared identifier 'temp'
if ( temp == ( rtx)-1LL ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/calls.c:2298:6: error: use of undeclared identifier 'before_call'
if ( before_call ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_to_integrate/src/obj/calls.o] Error 1
